2009-10-24  Andrea Grandi  <a.grandi@gmail.com>

	* po/it.po: Updated Italian translation

2009-10-22  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (ui_usercfg_window):
	Change position of 'Help' button in Maemo 5

2009-10-15  Rodrigo Flores <rodrigomarquesflores@gmail.com>

	* po/pt_BR.po: Updated Portuguese (Brazilian) translation

2009-10-15  Marcos Garcia  <marcosgg@gmail.com>

	* po/pt.po: Updated Portuguese translation

2009-10-15  Julien Duponchelle  <julien@duponchelle.info>

	* po/fr.po: Updated French translation

2009-10-08  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac:
	Detect Maemo 5

2009-10-08  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/audio.c:
	Use #ifdef HAVE_DSPMP3SINK rather than #ifdef MAEMO in audio.c

2009-10-06  Pēteris Caune  <cuu508@gmail.com>

	* po/lv.po: Updated Latvian translation

2009-10-05  Oskar Welzl  <mail@welzl.info>

	* po/de.po: Updated German translation

2009-10-05  Dawid Pakuła  <zulus@w3des.net>

	* po/pl.po: Updated polish translation

2009-10-01  Víctor Manuel Jáquez Leal  <vjaquez@igalia.com>

	* src/vgl-object.h:
	Make refcount volatile to avoid strange compiler optimizations

2009-09-29  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-server.h
	* src/vgl-server.c
	(vgl_server_new, vgl_server_list_add, vgl_server_list_init):
	Add 'free_streams' attribute to VglServer to tell which servers
	only stream music that is freely downloadable.

	* src/protocol.h
	* src/protocol.c
	(lastfm_session_new, lastfm_parse_playlist)
	(lastfm_request_playlist, lastfm_request_custom_playlist)
	* src/lastfm-ws.c
	(lastfm_ws_get_session, lastfm_ws_radio_get_playlist):
	Add a 'free_stream' attribute to the legacy LastfmSession object.

	* src/protocol.c
	(lastfm_parse_track):
	Set track->free_track_url if that server streams only free music.

2009-09-29  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track)
	* src/audio.c (lastfm_audio_play):